--- a/config.ini.example
+++ b/config.ini.example
@@ -1,9 +1,9 @@
-[dmenu]
+[bemenu]
 fn = SourceCodePro-11
 #fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
-# dmenu_command = /usr/bin/dmenu
-# # Note that dmenu_command can contain arguments as well like `rofi -width 30`
-# # Rofi and dmenu are set to case insensitive by default `-i`
+# bemenu_command = /usr/bin/bemenu
+# # Note that bemenu_command can contain arguments as well like `rofi -width 30`
+# # Rofi and bemenu are set to case insensitive by default `-i`
 # l = number of lines to display, defaults to number of total network options
 # fn = font string
 # nb = normal background (name, #RGB, or #RRGGBB)
@@ -20,14 +20,14 @@ fn = SourceCodePro-11
 # wifi_chars = ▂▄▆█
 # list_saved = <True or False> # (Default: False) list saved connections
 
-# [dmenu_passphrase]
+# [bemenu_passphrase]
 # override normal foreground and background colors, use the -P option along
-# with the Suckless dmenu password patch or use the -password option (rofi) to
+# with the Suckless bemenu password patch or use the -password option (rofi) to
 # obscure passphrase entry.
 # nf = #222222
 # nb = #222222
 # rofi_obscure = <True or False> (Default: True) Obscure passwords when typing
-# dmenu_password = <True or False> (Default: False) Use the -P option for dmenu (you need the appropriate dmenu patch!)
+# bemenu_password = <True or False> (Default: False) Use the -P option for bemenu (you need the appropriate bemenu patch!)
 
 # [editor]
 # terminal = <name of terminal program>
